@@ -79,14 +79,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-    * log core: ensure we use a special pool for stderr logging, so that
-      the stderr channel remains valid from the time plog is destroyed,
-      until the time the open_logs hook is called again.  [William Rowe]
-        http://svn.apache.org/viewvc?view=rev&revision=569535
-      Backported to 2.2;
-        http://people.apache.org/~wrowe/r569535-backport-2.2-r2.patch
-      +1: wrowe, jim, rpluem
-
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
 
