@@ -1,6 +1,10 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.2.6
 
+  *) log core: ensure we use a special pool for stderr logging, so that
+     the stderr channel remains valid from the time plog is destroyed,
+     until the time the open_logs hook is called again.  [William Rowe]
+
   *) mod_negotiation: preserve Query String in resolving a type map
      PR 33112 [Jørgen Thomsen <apache jth.net>, Nick Kew]
 
